Beijing release SO code with customizations
Signed-off-by: Sudhakar Reddy <Sudhakar.Reddy@amdocs.com>